@@ -1,9 +1,10 @@
 name             = Padre-Plugin-SpellCheck
+author           = Fayland Lam <fayland at gmail.com>
 author           = Jerome Quelin <jquelin@gmail.com>
 author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
 license          = Perl_5
 version          = 1.1.4
-copyright_holder = erome Quelin
+copyright_holder = Fayland Lam, Jerome Quelin
 
 [@PadrePlugin]
 
