@@ -1,18 +1,9 @@
-#
-# This file is part of Padre::Plugin::SpellCheck.
-# Copyright (c) 2009 Jerome Quelin, all rights reserved.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the same terms as Perl itself.
-#
-#
-
 package Padre::Plugin::SpellCheck::Preferences;
+
+# ABSTRACT: Preferences dialog for padre spell check
 
 use warnings;
 use strict;
-
-our $VERSION = '1.1.2';
 
 use Class::XSAccessor accessors => {
     _dict_combo  => '_dict_combo',   # combo box holding dictionary
@@ -158,13 +149,6 @@ sub _create_dictionaries {
 
 __END__
 
-
-=head1 NAME
-
-Padre::Plugin::SpellCheck::Preferences - preferences dialog for padre spell check
-
-
-
 =head1 DESCRIPTION
 
 This module implements the dialog window that will be used to set the
@@ -192,20 +176,5 @@ Create and return a new dialog window.
 
 For all related information (bug reporting, source code repository,
 etc.), refer to L<Padre::Plugin::SpellCheck>.
-
-
-
-=head1 AUTHOR
-
-Jerome Quelin, C<< <jquelin@cpan.org> >>
-
-
-
-=head1 COPYRIGHT & LICENSE
-
-Copyright (c) 2009 Jerome Quelin, all rights reserved.
-
-This program is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself.
 
 =cut
